Header presque terminé, card commencé, footer commencé

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     </header>
 
     <main>
+      <div class="artistes-vedettes">
          <include
           src="./component/card.html"
           locals='{"prenom": "Hans", "nom":"Zimmer", "image": "images/Hans-Zimmer.png"}'
@@ -42,8 +43,9 @@
           locals='{"prenom": "James", "nom":"Howard", "image": "images/James-Howard.png"}'
         >
       </include>
+      </div>
         <!-- Contenu principal -->
-         <p>fgeraqga ertg</p>
+      
     </main>
 
     <footer>
