--- a/src/index.html
+++ b/src/index.html
@@ -22,27 +22,27 @@
       <div class="artistes-vedettes">
          <include
           src="./component/card.html"
-          locals='{"prenom": "Hans", "nom":"Zimmer", "image": "images/Hans-Zimmer.png"}'
+          locals='{"prenom": "Hans", "nom":"Zimmer", "image": "images/Hans-Zimmer.png", "black": true}'
         >
         </include>
       <include
           src="./component/card.html"
-          locals='{"prenom": "Junkie", "nom":"XL", "image": "images/Junkie-XL.png"}'
+          locals='{"prenom": "Junkie", "nom":"XL", "image": "images/Junkie-XL.png", "black": false}'
         >
       </include>
             <include
           src="./component/card.html"
-          locals='{"prenom": "Danny", "nom":"Elfman", "image": "images/Danny-Elfman.png"}'
+          locals='{"prenom": "Danny", "nom":"Elfman", "image": "images/Danny-Elfman.png", "black": true}'
         >
       </include>
             <include
           src="./component/card.html"
-          locals='{"prenom": "Brian", "nom":"Tyler", "image": "images/Brian-Tyler.png"}'
+          locals='{"prenom": "Brian", "nom":"Tyler", "image": "images/Brian-Tyler.png", "black": false}'
         >
       </include>
             <include
           src="./component/card.html"
-          locals='{"prenom": "James", "nom":"Howard", "image": "images/James-Howard.png"}'
+          locals='{"prenom": "James", "nom":"Howard", "image": "images/James-Howard.png", "black": true, "black": true}'
         >
       </include>
       </div>
