Changement divers dans le code

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/xdd3ckf.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
 
   </head>
   <body>
@@ -46,8 +48,7 @@
         >
       </include>
       </div>
-        <!-- Contenu principal -->
-      
+  
     </main>
 
     <footer>
